# value-vroom

./: .dockerignore  .env  .gitignore  App.js  Dockerfile  README.md  app.json  docker-compose.prod.yml  mock-data.json  openapi-codegen.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
api/CarRental/: Cargo.toml
api/CarRental/database/: databaseScript.sql
api/CarRental/src/: main.rs
components/: CarCard.js
navigation/: tabs.js
screens/: HistoryScreen.js  HomeScreen.js  SearchScreen.js  SettingScreen.js
src/: App.tsx  index.js
src/api/: apiComponents.ts  apiContext.ts  apiFetcher.ts  apiSchemas.ts  apiUrl.ts
src/components/: CarCard.tsx  CarImage.tsx  CarList.tsx  FilterButton.tsx  Logo.tsx  SearchBar.tsx  SearchHeader.tsx
src/components/checkout/: BookingCalender.tsx  BookingTimePicker.tsx  CheckoutCarPreview.tsx  CheckoutDrawer.tsx  DatePicker.tsx  InvoiceModal.tsx  LocationPicker.tsx  ModalWrapper.tsx
src/navigators/: RootStackNavigator.tsx  TabNavigator.tsx
src/screens/: Home.tsx
src/screens/bookings/: Bookings.tsx  Complaint.tsx  Inspection.tsx  ManageBooking.tsx  OrderBooking.tsx  OrderConfirmation.tsx  Review.tsx
src/screens/search/: BookCarButton.tsx  CarDetails.tsx  DetailCard.tsx  Filter.tsx  LocationCard.tsx  ReviewCard.tsx  Search.tsx
src/screens/settings/: ContactUs.tsx  EditProfile.tsx  Login.tsx  Settings.tsx  SignUp.tsx
src/styles/: main.css
src/utility/: authentication.ts  index.ts
