[package]
name = "car_rental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
json = "0.12.4"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["sqlx-postgres", "postgres", "runtime-tokio"] }
tokio = {version = "1.32.0", features = ["full"]}
